syntax = "proto3";
option csharp_namespace = "grpcStuff";


service KorisniciServ {
	rpc DajJednogKorisnika (PraznaMsg) returns (KorisnikMsg);
	rpc IzlistajKorisnike (PraznaMsg) returns (stream KorisnikMsg);
	rpc Sabirac (stream BrojMsg) returns (BrojMsg);
	rpc DuplexTest (stream BrojMsg) returns (stream BrojMsg);
}

message PraznaMsg {}

message BrojMsg {
	int32 Br = 1;
}

message KorisnikMsg {
	int32 ID = 1;
	string Ime = 2;
	string Prezime = 3;
	repeated AdresaMsg Adrese = 4;
}

message AdresaMsg {
	string ID = 1;
	string Ulica = 2;
	string Broj = 3;
}
